--January 21, 2010--
- Added not-so-pretty-but-usable (I think :P ) find text functionality
  to documentation widget.

--January 11, 2010--
- Added python runner template, fixed encoding signature and runner creation.
- Fixed silly crash happening when starting PlasMate and then closing it.

--December 9, 2009--
- Refactored the Sidebar in order to inherit from QTableWidget, now it can
  be placed both in vertical and horizontal position; btw it need some 
  polishing yet =)
- Fixed font rendering, now it doesn't cut the ending of the string
- Updated older and obsolete includes

--December 6,2009--
- Documentation widget now saves its current page on exit and restores
  it the next time PlasMate starts.

--December 5, 2009--
- Rewritten the TimeLine widget in order to allow the user to place it both
  in vertical and horizontal position.

--November 30,2009--
- Selecting the editor tab now loads the previous active editor (if exists)
  instead of showing the 'select a file' QWidget.

--November 29,2009--
- The state of central widgets (editor, publisher, documentation etc)
  are no longer reloaded, but are remembered and restored as the user
  switches between them.

--November 28,2009--
- Added simple documentation widget.

--November 23,2009--
- Reverted 'Recent project list' to showing plasmoid names and fixed
  so it works. Import plasmoids now works.

--November 21,2009--
- Added preliminary support for importing plasmoids.
  'Recent project list' now shows project folder names instead of 
  plasmoid names to avoid confusion.

--November 15,2009--
- Added a simple, draft publisher widget. Exporting and installing plasmoids
  work, but online publishing doesn't for now.

--November 14,2009--
- New files can now be added to the project by clicking 'New' in the editor
  tree, and existing files can be deleted by doing a right-click > Delete.

--November 13,2009--
- Editor tree now dynamically reflects changes in the directory

--October 27,2009--