@@ -189,6 +189,13 @@ It is time the desktop caught up with us.</string>
                       </property>
                      </widget>
                     </item>
+                    <item row="2" column="1">
+                     <widget class="QPushButton" name="moreButton">
+                      <property name="text">
+                       <string>More Projects</string>
+                      </property>
+                     </widget>
+                    </item>
                    </layout>
                   </widget>
                  </item>
